--- a/html-youtube-tutorial-main/html-youtube-tutorial-main/Event Management HTML Project/starter/event.html
+++ b/html-youtube-tutorial-main/html-youtube-tutorial-main/Event Management HTML Project/starter/event.html
@@ -1,1 +1,36 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Events</title>
+        <link rel="icon" href="img/date.png"/>
+    </head>
+    <body bgcolor="black" style="color: white;">
+        <center>
+            <h1>Upcoming Events 📅</h1>
+            <p> Don't miss any of your important events. Stay updated</p>
+        </center>
+        <hr>
+        <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab cupiditate sint blanditiis, repellat autem tempora quidem. In, quos. Ut possimus saepe delectus laborum! Optio voluptate vitae molestiae ab, eaque quam deleniti rerum, sequi nostrum itaque provident dicta exercitationem dolor! Doloribus, aspernatur! Iure consectetur nostrum vero aspernatur illo dolorum accusantium non sequi omnis odit, sed fugit quia odio. Eum ex nobis mollitia quibusdam, molestias dolorem numquam quod culpa ullam magnam cupiditate officiis quaerat minus repudiandae praesentium rem laboriosam minima, sed eveniet voluptatem voluptate cumque vel laborum? At molestias consequuntur tempora. Quos consequatur quasi laborum commodi itaque voluptatibus nulla sed dicta placeat!</p>
+        <center>
+            <img src="img/event1.png" alt ="Weelcome to our gallery"/>
+            <h1>Photo Gallery Event</h1>
+            <h2>Free Entry | Free Food | Pets are not allowed</h2>
+        </center>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos ea possimus, atque ullam necessitatibus eaque veritatis nulla cum quidem voluptatem quod sunt suscipit placeat officiis magni quam ratione. Autem qui cumque esse. Sunt itaque eum eos doloribus porro praesentium molestiae odit, consequuntur dolore possimus maiores ad non repudiandae perferendis repellendus.
+        </p>
+        <center>
+            <img src="img/event2.png" alt="Fashin sale"/>
+            <h1>
+                <a href="https://www.myntra.com/">Fashion Store</a>
+            </h1>
+            <h2>Free Entry | Free Food | Pets are not allowed</h2>
+        </center>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis debitis id soluta nisi, molestias alias suscipit corporis nesciunt corrupti, tempora sunt mollitia provident repellat recusandae.</p>
+        <hr>
+        <center>
+            <h1>Contact</h1>
+            <h2>+91 787483743 | eventcollab@gmail.com</h2>
+            <p>9th street Avenue Park, Trichy, 625620</p>
+        </center>
+    </body>
+</html>
