--- a/html-youtube-tutorial-main/html-youtube-tutorial-main/Event Management HTML Project/starter/event.html
+++ b/html-youtube-tutorial-main/html-youtube-tutorial-main/Event Management HTML Project/starter/event.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
         <title>Events</title>
-        <link rel="icon" href="img/date.png"/>
+        <link rel="icon" href="img/date.png">
     </head>
     <body bgcolor="black" style="color: white;">
         <center>
