--- a/html-youtube-tutorial-main/html-youtube-tutorial-main/Event Management HTML Project/starter/event.html
+++ b/html-youtube-tutorial-main/html-youtube-tutorial-main/Event Management HTML Project/starter/event.html
@@ -32,6 +32,19 @@
             <h1>Contact</h1>
             <h2>+91 787483743 | eventcollab@gmail.com</h2>
             <p>9th street Avenue Park, Trichy, 625620</p>
+            <hr>
+            <p>Leo Song</p>
+            <audio controls playback muted loop>
+                <source src="Audio/Naa-Ready-MassTamilan.dev.mp3" type="audio/mpeg">
+            </audio><br><br>
+            <hr
+            <p>Leo Badass Video</p>
+            <video width="500px" controls playback muted loop>
+                <source src="D:\Basic Concepts\html-youtube-tutorial-main\html-youtube-tutorial-main\Event Management HTML Project\Video\Badass - Leo_HD-(PagalWorld.video).mp4" type="video/mp4">
+            </video>
+            <hr>
+            <p style="color: black;"><span style="background-color: aqua;">Hello guyz</span></p>
+            <p style="color: black;"><div style="background-color: aquamarine;">Hello guyz</div></p>
         </center>
     </body>
 </html>
