--- a/html-youtube-tutorial-main/html-youtube-tutorial-main/JS/index.html
+++ b/html-youtube-tutorial-main/html-youtube-tutorial-main/JS/index.html
@@ -39,8 +39,22 @@
             <h2 id="result"></h2>
         </div> -->
 
+ <!--   
 
+ Dice Roller Program:
+        
+            <div id="bdiv">
+            <h1>Dice Roller</h1><br>
+            <h2># of dice:</h2>
+            <input type="number" id="dice" min="1" max="6"> 
+            <button type="button" onclick="rollDice()">Roll Dice</button><br>
+            <h4 id="result"></h4>
+            <div id="dimage"></div>
+        </div>
 
+ -->
+
+        
         <script src="index.js"></script>
     </body>
 </html>
